--- a/ineur.html
+++ b/ineur.html
@@ -152,7 +152,7 @@
                         <p>As a classical guitarist <u class="under">Marta Fonseca</u> knows the ins and outs of classical music concerts and recitals. For that reason,
                             for her new tour there was an urge to break the mold, going against what one conventionally associates with the genre.</p>
                         <p>Asked to develop an image that would reflect that <u class="under">rebelious</u> act and could yet retain some <u class="under">formality</u>, I developed posters
-                            and a panflet for the tour mixing grainy visuals - photos courtesy of <u class="under">Beatriz Felício</u> - with simple typography and some blackletter details.
+                            and a pamphlet for the tour mixing grainy visuals - photos courtesy of <u class="under">Beatriz Felício</u> - with simple typography and some blackletter details.
                         </p>
                         <p>With the beginning of 2026 a new wave of concerts has come, this time in <u class="under">Amsterdam</u>, where Marta is currently living. For the new
                             dates a visual language that reflected this new chapter but kept some of the principles of the previous one was created.</p>
@@ -209,17 +209,17 @@
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_frente.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_dentro.jpg" class="img-fluid"><div class="pt-3 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_tras.jpg" class="img-fluid"><div class="pt-3 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                         <p>As a classical guitarist <u class="under">Marta Fonseca</u> knows the ins and outs of classical music concerts and recitals. For that reason,
                             for her new tour there was an urge to break the mold, going against what one conventionally associates with the genre.</p>
                         <p>Asked to develop an image that would reflect that <u class="under">rebelious</u> act and could yet retain some <u class="under">formality</u>, I developed posters
-                            and a panflet for the tour mixing grainy visuals - photos courtesy of <u class="under">Beatriz Felício</u> - with simple typography and some blackletter details.
+                            and a pamphlet for the tour mixing grainy visuals - photos courtesy of <u class="under">Beatriz Felício</u> - with simple typography and some blackletter details.
                         </p>
                         <p>With the beginning of 2026 a new wave of concerts has come, this time in <u class="under">Amsterdam</u>, where Marta is currently living. For the new
                             dates a visual language that reflected this new chapter but kept some of the principles of the previous one was created.</p>
@@ -313,19 +313,19 @@
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_frente.jpg" class="img-fluid">
                                 <div class="pt-1 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_dentro.jpg" class="img-fluid">
                                 <div class="pt-1 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_prog_tras.jpg" class="img-fluid">
                                 <div class="pt-1 slide-description">
-                                    <p>Performance panflet.</p>
+                                    <p>Performance pamphlet.</p>
                                 </div>
                             </div>
                         </div>
